// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Combination renders correctly 1`] = `
[
  <h1>
    I'm groot
  </h1>,
  <input
    onChange={[Function]}
    type="text"
  />,
  <button>
    Click me 
  </button>,
]
`;

exports[`Combination组件 输入框和按钮能够正常交互 1`] = `
[
  <h1>
    测试文本
  </h1>,
  <input
    onChange={[Function]}
    type="text"
  />,
  <button>
    Click me 
    输入测试
  </button>,
]
`;
